--- a/index.html
+++ b/index.html
@@ -2,8 +2,35 @@
 <html>
 <head>
   <title>My Web</title>
+  <meta name="viewport" content="user-scalable=no,initial-scale=1,maximum-scale=1">
+  <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+        body {
+            width: 960px;
+            margin: 0 auto;
+            overflow: hidden;
+        }
+        @media screen and (max-width:767px) {
+            body { width: auto;
+                   color: red;
+                 }
+        }
+    </style>
 </head>
 <body>
   <h1>동해물과 백두산이 마르고 닳도록</h1>
+  <p>지난밤에<br>
+눈이 소오복히 왔네<br>
+<br>
+지붕이랑<br>
+길이랑 밭이랑<br>
+추워한다고<br>
+덮어주는 이불인가봐<br>
+<br>
+그러기에<br>
+추운 겨울에만 내리지 </p>
 </body>
 </html>
