--- a/index.html
+++ b/index.html
@@ -4,10 +4,6 @@
   <title>My Web</title>
   <meta name="viewport" content="user-scalable=no,initial-scale=1,maximum-scale=1">
   <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
         body {
             width: 960px;
             margin: 0 auto;
@@ -22,7 +18,7 @@
 </head>
 <body>
   <h1>동해물과 백두산이 마르고 닳도록</h1>
-  <p>지난밤에<br>
+  <h1>지난밤에<br>
 눈이 소오복히 왔네<br>
 <br>
 지붕이랑<br>
@@ -31,6 +27,6 @@
 덮어주는 이불인가봐<br>
 <br>
 그러기에<br>
-추운 겨울에만 내리지 </p>
+추운 겨울에만 내리지 </h1>
 </body>
 </html>
