--- a/index.html
+++ b/index.html
@@ -4,10 +4,25 @@
   <title>My Web</title>
   <meta name="viewport" content="user-scalable=no,initial-scale=1,maximum-scale=1">
   <style>
+        @font-face {
+
+            font-family: 'MaplestoryOTFBold';
+
+            src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/MaplestoryOTFBold.woff') format('woff');
+
+            font-weight: 700;
+
+            font-style: normal;
+
+        }
         body {
             width: 960px;
             margin: 0 auto;
             overflow: hidden;
+            text-align: ;
+            font-family: "MaplestoryOTFBold", serif;
+            font-size: 25px;
+            line-height: 40px; 
         }
         @media screen and (max-width:767px) {
             body { width: auto;
@@ -17,8 +32,8 @@
     </style>
 </head>
 <body>
-  <h1>동해물과 백두산이 마르고 닳도록</h1>
-  <h1>지난밤에<br>
+  <h1>눈 - 윤동주</h1>
+  <h2>지난밤에<br>
 눈이 소오복히 왔네<br>
 <br>
 지붕이랑<br>
@@ -27,6 +42,6 @@
 덮어주는 이불인가봐<br>
 <br>
 그러기에<br>
-추운 겨울에만 내리지 </h1>
+추운 겨울에만 내리지 </h2>
 </body>
 </html>
